# fpocket

./: .gitattributes  .gitignore  Dockerfile  Dockerfile-debian-slim  Dockerfile-molfile-debug  INSTALL.txt  LICENSE  Makefile.am  README.md  azure-pipelines.yml  bugreport.txt  changelog.txt  clean.sh  configure.ac  descall.sh  makefile  mdpout_descriptors.txt  newFeatures.txt  rebuild.sh  run_tests.py  testall.sh  todo.txt
data/: ._aa-variants-v1.cif  ._components.cif  .gitignore  aa-variants-v1.cif  all_pdb_test.txt  bird_test.txt  data_fpocket.csv  extractModifiedResidueCodes.py  keepResidues.txt  non_BIRD.csv  non_bird_test.txt  pdb_manager.py  peptide-test.txt
doc/: GETTINGSTARTED.md  INSTALLATION.md  INTRODUCTION.md  MANUAL.md  manual_fpocket2.odt
headers/: aa.h  asa.h  atom.h  calc.h  check.h  cluster.h  clusterlib.h  descriptors.h  dparams.h  dpmain.h  dpocket.h  energy.h  fparams.h  fpmain.h  fpocket.h  fpout.h  grid.h  mdparams.h  mdpbase.h  mdpmain.h  mdpmem.h  mdpocket.h  mdpout.h  memhandler.h  neighbor.h  pertable.h  pocket.h  pscoring.h  psorting.h  read_mmcif.h  refine.h  rpdb.h  sort.h  topology.h  tparams.h  tpmain.h  tpocket.h  utils.h  voronoi.h  voronoi_lst.h  (+3 more)
man/: Makefile.am  dpocket.8  fpocket.8  tpocket.8
scripts/: Makefile.am  astex-diverse-pdb.svl  cluster2pdb_v.py  createMDPocketInputFile.py  cuttree_dist.py  doCleanPDBs.py  eval_PP.sh  eval_PP_allcrit.svl  eval_PP_cheng.svl  eval_fpocket.svl  extractISOPdb.py  gold-pdb.svl  ppicket-frame.tzd
src/: aa.c  asa.c  atom.c  calc.c  check.c  cluster.c  clusterlib.c  descriptors.c  dparams.c  (+34 more)
(+2192 files in other folders)
